# wsb-core

./: .gitignore  Jenkinsfile  README.md  pom.xml
gnu-cpp/core/: .gitignore  CMakeLists.txt  Doxyfile.in
gnu-cpp/core/debian/: control  libinstall  substvars
gnu-cpp/core/include/wsb-core/: wsb-core.h
gnu-cpp/core/include/wsb-core/broker/: Broker.h  BrokeringTree.h  DispatchIntermediaryDown.h  DispatchIntermediaryUp.h  Group.h  IntermediariesFactory.h  Intermediary.h  IntermediaryException.h  IntermediaryFactory.h  MessageBroker.h  ResponseException.h
gnu-cpp/core/include/wsb-core/common/: Exception.h  Lifecycle.h  LifecycleException.h  Logging.h  SGC.h  URI.h
gnu-cpp/core/include/wsb-core/common/dispatch/: BarrierDispatchable.h  DispatchQueue.h  Dispatchable.h  MutexLocker.h  ParallelDispatchQueue.h  Runnable.h  SafeBlockingQueue.h  SerialDispatchQueue.h  Thread.h  ThreadPool.h  ThreadPoolJob.h  ThreadPoolRunner.h
gnu-cpp/core/include/wsb-core/common/io/: IOUtils.h
gnu-cpp/core/include/wsb-core/common/xml/: DOMManipulator.h  XMLBuilder.h  XMLBuilderException.h  XMLBuilderFactory.h
gnu-cpp/core/include/wsb-core/engine/: WSEngine.h
gnu-cpp/core/include/wsb-core/message/: Message.h  MessageBuilderException.h  MessageContext.h  MessageFactory.h  MessageFactoryNotFound.h
gnu-cpp/core/include/wsb-core/network/: AbstractConnector.h  ConnectorException.h  MessagePoller.h  NetworkContext.h  NetworkLayer.h
gnu-cpp/core/include/wsb-libstd/connector/: LoopbackConnector.h  TCPConnector.h  UnixSocketConnector.h
gnu-cpp/core/include/wsb-libstd/connector/tcp/: MessageStreamTCPConnector.h
gnu-cpp/core/include/wsb-libstd/intermediary/: HeaderInjectTimestamp.h  HeaderInjectTimestampFactory.h  WSAddressing.h
gnu-cpp/core/include/wsb-libstd/message/soap/: SOAPMessage.h  SOAPMessageFactory.h
gnu-cpp/core/include/wsb-libstd/xml/: XMLNode.h
gnu-cpp/core/include/wsb-libstd/xml/saml2/: AuthnStatement.h  SAML2.h  SAML2Assertion.h  Statement.h  Subject.h
gnu-cpp/core/src/vxml-libxml2/vdom/: DOMDocument.cpp  DOMDocument.h  DOMElement.cpp  DOMElement.h  DOMImplementation.cpp  DOMImplementation.h  DOMImplementationFactory.cpp  DOMImplementationFactory.h  DOMLSSerializer.cpp  DOMLSSerializer.h  DOMNode.cpp  DOMNode.h
gnu-cpp/core/src/vxml-libxml2/vxpath/: XPathContext.cpp  XPathContext.h
gnu-cpp/core/src/vxml/vdom/: VDOMDocument.cpp  VDOMDocument.h  VDOMElement.cpp  VDOMElement.h  VDOMImplementation.cpp  VDOMImplementation.h  VDOMImplementationFactory.cpp  VDOMImplementationFactory.h  VDOMLSSerializer.cpp  VDOMLSSerializer.h  VDOMNode.cpp  VDOMNode.h  VDOMNodeList.cpp  VDOMNodeList.h  VDOMRegistry.cpp  VDOMRegistry.h
gnu-cpp/core/src/vxml/vdom/utils/: NodePool.cpp  NodePool.h
gnu-cpp/core/src/vxml/vxpath/: VXPathContext.cpp  VXPathContext.h  VXPathNSContext.cpp  VXPathNSContext.h  VXPathResult.cpp  VXPathResult.h
gnu-cpp/core/src/wsb-core/: ccomp.cpp
gnu-cpp/core/src/wsb-core/broker/: Broker.cpp  BrokeringTree.cpp  DispatchIntermediaryDown.cpp  DispatchIntermediaryUp.cpp  Group.cpp  IntermediariesFactory.cpp  Intermediary.cpp  IntermediaryException.cpp  IntermediaryFactory.cpp  MessageBroker.cpp  ResponseException.cpp
gnu-cpp/core/src/wsb-core/common/: Exception.cpp  Lifecycle.cpp  LifecycleException.cpp  Logging.cpp  SGC.cpp  URI.cpp
gnu-cpp/core/src/wsb-core/common/dispatch_common/: BarrierDispatchable.cpp  DispatchQueue.cpp  Dispatchable.cpp  MutexLocker.cpp  Runnable.cpp  ThreadPool.cpp  ThreadPoolJob.cpp  ThreadPoolRunner.cpp
gnu-cpp/core/src/wsb-core/common/dispatch_pthread/: ParallelDispatchQueue.cpp  SafeBlockingQueue.cpp  SerialDispatchQueue.cpp  Thread.cpp
gnu-cpp/core/src/wsb-core/common/io/: IOUtils.cpp
gnu-cpp/core/src/wsb-core/common/xml/: DOMManipulator.cpp  XMLBuilder.cpp  XMLBuilderException.cpp  XMLBuilderFactory.cpp
gnu-cpp/core/src/wsb-core/engine/: WSEngine.cpp
gnu-cpp/core/src/wsb-core/message/: Message.cpp  MessageBuilderException.cpp  MessageContext.cpp  MessageFactory.cpp  MessageFactoryNotFound.cpp
gnu-cpp/core/src/wsb-core/network/: AbstractConnector.cpp  ConnectorException.cpp  MessagePoller.cpp  NetworkContext.cpp  NetworkLayer.cpp
gnu-cpp/core/src/wsb-libstd/connector/: LoopbackConnector.cpp  TCPConnector.cpp  UnixSocketConnector.cpp
gnu-cpp/core/src/wsb-libstd/intermediary/: HeaderInjectTimestamp.cpp  HeaderInjectTimestampFactory.cpp  WSAddressing.cpp
gnu-cpp/core/src/wsb-libstd/xml/: XMLNode.cpp
gnu-cpp/core/tests/: BaseTestEngine.hpp  WSEngineWithLoopback.hpp  tests_cmake.txt  vxml_regressions.cpp  wsb_core_regressions.cpp
gnu-cpp/core/tests/broker/: TestBrokeringTree.cpp  test_brokering_tree.xml
gnu-cpp/core/tests/connector/tcp/: TestTCPMessageStream.cpp
gnu-cpp/core/tests/libstd/message-soap/: TestSOAPMessage.cpp
gnu-cpp/core/tests/libstd/saml2/: TestSAML2.cpp
gnu-cpp/core/tests/oldsrc/: simple-server.cpp  test-comp-c.c  test-connector-unix.cpp  test-general.cpp  test-server-client.cpp  test-types-serialisations.cpp
gnu-cpp/core/tests/oldsrc/broker/: req_client_broker.xml  tcl_broker.xml
gnu-cpp/core/tests/oldsrc/messages/: empty.xml  empty_connector_tree.xml  wrong_syntax_empty.xml
gnu-cpp/core/tests/vxml-libxml2/vdom/: vxml_libxml2_vdom.cpp
gnu-cpp/core/tests/vxml/vdom/: vdom_regressions_doc.xml  vxml_vdom_simple.cpp
gnu-cpp/core/tests/vxml/vxpath/: vxml_vxpath_simple.cpp  vxpath_regressions_doc.xml
gnu-cpp/examples/: .gitignore  CMakeLists.txt  NewFile.xml
gnu-cpp/examples/src/: mstream_wsaddressing_rpchandler.cpp
gnu-cpp/lib-remote/: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  install_manifest.txt
gnu-cpp/lib-remote/tests/: tests_cmake.txt  wsb_libremote_regressions.cpp
gnu-cpp/lib-remote/tests/callup/: TestRCPHandler.cpp
gnu-cpp/lib-tcl/: .gitignore  CMakeLists.txt
gnu-cpp/lib-tcl/include/: TCLInvoke.h  TCLInvokeFactory.h  ws-rmb-lib-tcl.hpp
gnu-cpp/lib-tcl/src/: TCLInvoke.cpp  TCLInvokeFactory.cpp
gnu-cpp/lib-tcl/tests/: test-lpb-tcl.cpp  test-tcl-interp.cpp
gnu-cpp/lib-tcl/tests/broker/: tcl_broker.xml
gnu-cpp/lib-tcl/tests/tcl/: test.tcl
scala/: pom.xml  (+1 more)
(+120 files in other folders)
